<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/login2"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:layout_marginTop="115dp"/>

    <EditText
        android:id="@+id/ed_user1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/ed_user2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/ed_user3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="16sp"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/teal_200"
            android:textSize="16sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/teal_200"
            android:textSize="16sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_signUp_create"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:letterSpacing="0.1"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_200"
        android:textSize="16sp"
        android:background="@drawable/roundedbutton"/>

</LinearLayout>