<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"

    tools:context=".MainActivity">

    <Button

        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="13dp"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:elevation="30dp"
        android:text="@string/_9"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btn8"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn9"
        android:layout_alignBottom="@+id/btn9"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/btn9"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_8" />

    <Button
        android:id="@+id/btn7"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn8"
        android:layout_alignBottom="@+id/btn8"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-2dp"
        android:layout_toEndOf="@+id/btn8"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_7" />

    <Button
        android:id="@+id/btn6"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn9"
        android:layout_alignStart="@+id/btn9"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_6" />

    <Button
        android:id="@+id/btn5"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn8"
        android:layout_alignTop="@+id/btn6"
        android:layout_marginStart="-7dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_5" />

    <Button
        android:id="@+id/btn4"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn7"
        android:layout_alignTop="@+id/btn5"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_4" />

    <Button
        android:id="@+id/btn3"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn6"
        android:layout_alignStart="@+id/btn6"
        android:layout_marginTop="13dp"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_3" />

    <Button
        android:id="@+id/btn2"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn5"
        android:layout_alignTop="@+id/btn3"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_2" />

    <Button
        android:id="@+id/btn1"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn4"
        android:layout_alignTop="@+id/btn2"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_1" />

    <Button
        android:id="@+id/btnclear"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn3"
        android:layout_alignStart="@+id/btn3"
        android:layout_marginTop="13dp"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btn0"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn2"
        android:layout_alignTop="@+id/btnclear"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_0" />

    <Button
        android:id="@+id/btnequal"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn1"
        android:layout_alignBottom="@+id/btn0"
        android:layout_marginStart="-2dp"
        android:layout_marginBottom="-2dp"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_equal" />

    <Button
        android:id="@+id/btndivide"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn7"
        android:layout_marginStart="6dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/btn7"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/_slash" />

    <Button
        android:id="@+id/btnmul"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn4"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/btn4"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/multi" />

    <Button
        android:id="@+id/btnadd"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn1"
        android:layout_alignBottom="@+id/btn1"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="-2dp"
        android:layout_toEndOf="@+id/btn1"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnsub"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnequal"
        android:layout_alignBottom="@+id/btnequal"
        android:layout_marginStart="11dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="-6dp"
        android:layout_toEndOf="@+id/btnequal"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/roundedbutton"
        android:textColor="#ffffff"
        android:text="@string/subtrac" />

    <TextView
        android:id="@+id/tvControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btndivide"
        android:layout_alignStart="@+id/btn9"
        android:layout_alignEnd="@+id/btndivide"
        android:layout_marginBottom="39dp"
        android:layout_toEndOf="@+id/btn7"

        android:textSize="22sp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvControl"
        android:layout_alignStart="@+id/btn9"
        android:layout_alignEnd="@+id/tvControl"
        android:layout_marginBottom="41dp"
        android:textSize="24sp" />
</RelativeLayout>