<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:layout_marginTop="110dp"/>
    <EditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:letterSpacing="0.2"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_200"
        android:textSize="16sp"
        android:background="@drawable/roundedbutton"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:text="@string/don_t_have_an_account"/>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:letterSpacing="0.2"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_200"
        android:textSize="16sp"
        android:background="@drawable/roundedbutton"/>

</LinearLayout>